Refactor parts of table sorting

--- a/app/views/data_explorer/dimensional/_results.html.erb
+++ b/app/views/data_explorer/dimensional/_results.html.erb
@@ -78,6 +78,7 @@
 
 <table
   data-data-explorer--results-table-highlight-target="table"
+  data-data-explorer--results-table-sort-target="table"
   data-controller="data-explorer--results-table-sort">
 
   <colgroup>
