--- a/app/queries/big_query/dimensional.sql.erb
+++ b/app/queries/big_query/dimensional.sql.erb
@@ -1,3 +1,5 @@
+-- Dovetail Insights: Dimensional
+
 DECLARE range_start TIMESTAMP DEFAULT '<%= composition.abs_from.to_s %>';
 DECLARE range_end TIMESTAMP DEFAULT '<%= composition.abs_to.to_s %>';
 
