--- a/app/queries/big_query/dimensional.sql.erb
+++ b/app/queries/big_query/dimensional.sql.erb
@@ -3,33 +3,42 @@
 DECLARE range_start TIMESTAMP DEFAULT '<%= composition.abs_from.to_s %>';
 DECLARE range_end TIMESTAMP DEFAULT '<%= composition.abs_to.to_s %>';
 
--- NOTE: Rolling window calculations and ranges are unused with non-rolling
--- compositions, but included to make this template less complex.
+<%
+  # NOTE: Rolling window calculations and ranges are *unused* with non-rolling
+  # compositions, but included to make this template less complex with fewer
+  # conditionals.
+%>
 
--- I couldn't get any of the native range functions in BigQuery to do
--- exactly what I wanted, so this is some manual math. The goal is to
--- have a set of ranges, anchored to the chosen range end, and starting
--- at or before the chosen range start, such that each range is exactly
--- the same number of seconds
+<%
+  # I couldn't get any of the native range functions in BigQuery to do
+  # exactly what I wanted, so this is some manual math. The goal is to
+  # have a set of ranges, anchored to the chosen range end, and starting
+  # at or before the chosen range start, such that each range is exactly
+  # the same number of seconds
+%>
 DECLARE rolling_window_num_seconds INT64 DEFAULT <%= composition.try(:window) || 86400 %>;
 
--- Get the total time range duration in seconds
+<%# Get the total time range duration in seconds %>
 DECLARE range_duration_in_seconds INT64 DEFAULT TIMESTAMP_DIFF(range_end, range_start, SECOND);
 
--- Figure out how many windows for the current rolling window setting
--- fit into that duration (e.g., duration=10, window=3, that would give
--- 3.333 windows)
--- This assume windows are always defined as some number of *days*
+<%
+  # Figure out how many windows for the current rolling window setting
+  # fit into that duration (e.g., duration=10, window=3, that would give
+  # 3.333 windows)
+  # This assume windows are always defined as some number of *days*
+%>
 DECLARE num_windows_in_range FLOAT64 DEFAULT range_duration_in_seconds / rolling_window_num_seconds;
--- Round the number of windows up, so we have a whole number of windows
--- that covers at least the entire duration (e.g., 4 windows)
+
+<%
+  # Round the number of windows up, so we have a whole number of windows
+  # that covers at least the entire duration (e.g., 4 windows)
+%>
 DECLARE expanded_num_windows_in_range INT64 DEFAULT CAST(CEIL(num_windows_in_range) AS INT64);
 
--- Get the total number of seconds in that whole number quantity of
--- windows
+<%# Get the total number of seconds in that whole number quantity of windows %>
 DECLARE expanded_range_duration_in_seconds INT64 DEFAULT expanded_num_windows_in_range * rolling_window_num_seconds;
 
---
+
 DECLARE expanded_range_start TIMESTAMP DEFAULT TIMESTAMP_SUB(range_end, INTERVAL expanded_range_duration_in_seconds SECOND);
 
 <%
@@ -66,8 +75,10 @@ DECLARE expanded_range_start TIMESTAMP DEFAULT TIMESTAMP_SUB(range_end, INTERVAL
   end
 %>
 
--- In order to ensure that the time range operates as expected, we make
--- queries for downloads and impressions before doing any JOINs.
+<%
+  # In order to ensure that the time range operates as expected, we make
+  # queries for downloads and impressions before doing any JOINs.
+%>
 WITH
 downloads_in_range AS (
   SELECT <%= dl_cte_selects.uniq.join(", ") %>
@@ -94,12 +105,14 @@ downloads_in_range AS (
   )
 <% end %>
 
+<%
+  # This generates a set of ranges to be used on time series lenses, when
+  # the granularity is a rolling window. It's pretty safe to set up the
+  # CTE on all queries. This uses the window math DEFINEs from above, to
+  # create a table with a row for each window, with a column for the start
+  # and end.
+%>
 ,rolling_window_ranges AS (
-  -- This generates a set of ranges to be used on time series lenses, when
-  -- the granularity is a rolling window. It's pretty safe to set up the
-  -- CTE on all queries. This uses the window math DEFINEs from above, to
-  -- create a table with a row for each window, with a column for the start
-  -- and end.
   SELECT *
 
   FROM UNNEST(
