--- a/app/views/data_explorer/_lens_wizard.html.erb
+++ b/app/views/data_explorer/_lens_wizard.html.erb
@@ -2,29 +2,31 @@
   <ul>
     <li>
       <a href="/data-explorer?lens=dimensional">
-        Dimension Analysis
+        <h1>Dimension Analysis</h1>
 
         <p>Slice and dice data using up to two customizable attributes, like country, app, or season</p>
       </a>
     </li>
     <li>
       <a href="/data-explorer?lens=timeSeries">
-        Data Over Time
+        <h1>Data Over Time</h1>
 
         <p>Use time series data to analyze how your podcasts perform over time</p>
       </a>
     </li>
     <li>
       <a href="/data-explorer?lens=cume">
-        Cumulative Performance
+        <h1>Cumulative Performance</h1>
 
         <p>Compare how episodes accumulate downloads to identify lifecycle patterns</p>
       </a>
     </li>
-    <li>
-      Custom Report
+    <li style="color: #aaa;">
+      <a>
+        <h1>Custom Report</h1>
 
-      <p>Create a table that includesexactly the data you need</p>
+        <p>Create a table that includesexactly the data you need</p>
+      </a>
     </li>
   </ul>
 </dialog>
