--- a/app/views/data_explorer/bookmarks.html.erb
+++ b/app/views/data_explorer/bookmarks.html.erb
@@ -34,4 +34,5 @@
   <li><a href="/data-explorer?lens=timeSeries&from=now-3/D&to=now/D&filter.podcast=include&filter.podcast.values=3&granularity=daily&metrics=downloads&group.1=continent&group.2=device&compare.WoW=1">Time Series: Daily, 2 groups, 1 metric, 1 comparison</a></li>
   <li><a href="/data-explorer?lens=timeSeries&from=now-3/D&to=now/D&filter.podcast=include&filter.podcast.values=3&granularity=daily&metrics=downloads,uniques&group.1=continent&group.2=device&compare.WoW=1">Time Series: Daily, 2 groups, 2+ metrics, 1 comparison</a></li>
   <li><a href="/data-explorer?lens=timeSeries&from=2025-02-22T00:00:00Z&to=2025-02-26T00:00:00Z&filter.podcast=include&filter.podcast.values=3&filter.country=include&filter.country.values=AI&granularity=daily&metrics=downloads">Time Series: with missing intervals</a></li>
+  <li><a href="/data-explorer?lens=timeSeries&from=2025-02-05&to=2025-02-21&filter.podcast=include&filter.podcast.values=3&granularity=weekly&metrics=downloads">Time Series: with partial intervals</a></li>
 </ul>
