--- a/app/views/data_explorer/time_series/_results.html.erb
+++ b/app/views/data_explorer/time_series/_results.html.erb
@@ -31,11 +31,13 @@
 
   # Create a set of each group's members, plus `nil` to represent values that
   # don't belong to any member of that group (if necessary)
-  @expand_group_1_member_descriptors = @composition.results.group_1_unique_member_descriptors || []
-  @expand_group_1_member_descriptors << nil #if @tbl_show_group_1_unknowns
+  @display_group_1_member_descriptors = @composition.results.group_1_unique_member_descriptors || []
+  @display_group_1_member_descriptors << nil #if @tbl_show_group_1_unknowns
+  @display_group_1_member_descriptors = default_group_member_descriptor_sort(@composition, @composition.groups[0], @display_group_1_member_descriptors)
 
   @display_group_2_member_descriptors = @composition.results.group_2_unique_member_descriptors || []
   @display_group_2_member_descriptors << nil #if @tbl_show_group_2_unknowns
+  @display_group_2_member_descriptors = default_group_member_descriptor_sort(@composition, @composition.groups[1], @display_group_2_member_descriptors)
 %>
 
 <table data-data-explorer--results-table-highlight-target="table">
@@ -67,7 +69,7 @@
   <tbody>
     <%= render "data_explorer/time_series/results/table/40_totals_row" %>
 
-    <%= render partial: "data_explorer/time_series/results/table/50_group_row_block", collection: @expand_group_1_member_descriptors, as: :group_1_member_descriptor %>
+    <%= render partial: "data_explorer/time_series/results/table/50_group_row_block", collection: @display_group_1_member_descriptors, as: :group_1_member_descriptor %>
 
     <%#= render "data_explorer/time_series/results/table/60_no_group_row" %>
   </tbody>
