--- a/app/views/fields/bytes_field/_index.html.erb
+++ b/app/views/fields/bytes_field/_index.html.erb
@@ -1,1 +1,1 @@
-<%= number_to_human_size(field.data) %> (<%= number_to_currency(field.data.to_f / 2.0**40 * BIG_QUERY_PRICE_PER_TIB, precision: 5) %>)
+<%= number_to_human_size(field.data) %> (<%= number_to_currency(field.data.to_f / 2.0**40 * BIGQUERY_PRICE_PER_TIB, precision: 5) %>)
