--- a/app/views/layouts/_subnav.html.erb
+++ b/app/views/layouts/_subnav.html.erb
@@ -8,7 +8,7 @@
 
   <nav class="prx-app-nav navbar-nav justifty-content-end navbar-expand-md">
     <div class="collapse navbar-collapse justify-content-start align-items-stretch" id="navbarSubNav">
-      <p>Last 48 hours: <%= number_to_human_size(@bytes) %> (<%= number_to_currency(@bytes.to_f / 2.0**40 * BIG_QUERY_PRICE_PER_TIB, precision: 5) %>)</p>
+      <p>Last 48 hours: <%= number_to_human_size(@bytes) %> (<%= number_to_currency(@bytes.to_f / 2.0**40 * BIGQUERY_PRICE_PER_TIB, precision: 5) %>)</p>
     </div>
   </nav>
 </div>
