--- a/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
@@ -8,7 +8,7 @@
       <%
         # Don't display an overall total for this metric if either group is not summable
         if @composition.groups[0]&.summable?(metric) && @composition.groups[1]&.summable?(metric)
-          total = @composition.results.get_total(metric)
+          total = @composition.results.calc_sum(metric)
           text = number_with_delimiter(total)
 
           title = "tktk"
@@ -31,15 +31,20 @@
       <%
         # Don't display a total for this group 2 member if group 1 is not summable for this metric
         if !@composition.groups[0] || @composition.groups[0]&.summable?(metric)
-          total = @composition.results.get_total(metric, @composition.groups[1], group_2_member_descriptor)
+          sum = @composition.results.calc_sum(metric, @composition.groups[1], group_2_member_descriptor)
           min = @composition.results.get_min(metric, @composition.groups[1], group_2_member_descriptor)
           max = @composition.results.get_max(metric, @composition.groups[1], group_2_member_descriptor)
           range = (max||0) - (min||0)
           mean = @composition.results.get_arith_mean(metric, false, group_2_member_descriptor) || 0
 
-          text = number_with_delimiter(total)
+          total_sum = @composition.results.calc_sum(metric)
+          sum_as_percent = ((sum / total_sum.to_f) * 100).round(2)
+
+          text = number_with_delimiter(sum)
 
           title = [
+            "Total #{metric.metric} for #{member_label(@composition, @composition.groups[1], group_2_member_descriptor)} across all #{prop_or_dim_label(@composition.groups[0].dimension).pluralize}: #{sum}",
+            "#{sum_as_percent}% of overall total",
             "Mean: #{number_with_delimiter(mean)}",
             "Min: #{number_with_delimiter(min)}",
             "Max: #{number_with_delimiter(max)}",
