--- a/app/views/data_explorer/dimensional/_results.html.erb
+++ b/app/views/data_explorer/dimensional/_results.html.erb
@@ -28,13 +28,15 @@
   @tbl_show_group_2_totals = true
   @tbl_show_group_2_unknowns = true
 
-  ##
-  # Turn things off for certain permutations of groups and metrics.
+  # ##
+  # # Turn things off for certain permutations of groups and metrics.
+  # # Note: The table should always work if everything is displayed, even if
+  # # isn't pretty or it includes repetitive data.
 
   # If less than 2 metrics are selected, don't show the headers. Except if no
   # groups are selected; in that case always show metrics headers since they
   # will be the only headers
-  @tbl_show_metric_headers = false if @composition.groups.size > 0 && @composition.metrics.size <= 1
+  @tbl_show_metric_headers = false if @composition.metrics.size <= 1
 
   @tbl_show_meta_headers = false if !@composition.groups[0]&.meta
 
