--- a/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
@@ -1,3 +1,8 @@
+<%
+  g1 = @composition&.groups[0]
+  g2 = @composition&.groups[1]
+%>
+
 <tr>
   <% if @tbl_show_group_1_headers %>
     <th scope="row">TOTAL</th>
@@ -6,15 +11,21 @@
   <% if @tbl_show_group_1_totals %>
     <% @composition.metrics.each do |metric| %>
       <%
-        # Don't display an overall total for this metric if either group is not summable
-        if @composition.groups[0]&.summable?(metric) && @composition.groups[1]&.summable?(metric)
+        if (
+            # If there are two groups, and they are both summable
+            (g1 && g1.summable?(metric) && g2 && g2.summable?(metric)) ||
+            # Or there's one group and it's summable
+            (!g2 && g1 && g1.summable?(metric)) ||
+            # If there's no groups, summing is irrelevant, but allow it anyway
+            (!g1 && !g2)
+          )
           total = @composition.results.calc_sum(metric)
           text = number_with_delimiter(total)
 
-          title = "tktk"
+          title = "Total #{metric.metric}: #{number_with_delimiter(total)}"
         else
           text = "n/a"
-          title = "When grouping by #{prop_or_dim_label @composition.groups[0]&.dimension} and #{prop_or_dim_label @composition.groups[1]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting."
+          title = "When grouping by #{prop_or_dim_label g1&.dimension} and #{prop_or_dim_label g2&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting."
         end
       %>
 
@@ -29,11 +40,17 @@
   <% @display_group_2_member_descriptors.each do |group_2_member_descriptor| %>
     <% @composition.metrics.each do |metric| %>
       <%
-        # Don't display a total for this group 2 member if group 1 is not summable for this metric
-        if !@composition.groups[0] || @composition.groups[0]&.summable?(metric)
-          sum = @composition.results.calc_sum(metric, @composition.groups[1], group_2_member_descriptor)
-          min = @composition.results.get_min(metric, @composition.groups[1], group_2_member_descriptor)
-          max = @composition.results.get_max(metric, @composition.groups[1], group_2_member_descriptor)
+        if (
+            # If there are two groups, and they are both summable
+            (g1 && g1.summable?(metric) && g2 && g2.summable?(metric)) ||
+            # Or there's one group and it's summable
+            (!g2 && g1 && g1.summable?(metric)) ||
+            # If there's no groups, summing is irrelevant, but allow it anyway
+            (!g1 && !g2)
+          )
+          sum = @composition.results.calc_sum(metric, g2, group_2_member_descriptor)
+          min = @composition.results.get_min(metric, g2, group_2_member_descriptor)
+          max = @composition.results.get_max(metric, g2, group_2_member_descriptor)
           range = (max||0) - (min||0)
           mean = @composition.results.get_arith_mean(metric, false, group_2_member_descriptor) || 0
 
@@ -43,7 +60,7 @@
           text = number_with_delimiter(sum)
 
           title = [
-            "Total #{metric.metric} for #{member_label(@composition, @composition.groups[1], group_2_member_descriptor)} across all #{prop_or_dim_label(@composition.groups[0].dimension).pluralize}: #{sum}",
+            "Total #{metric.metric} for #{member_label(@composition, g2, group_2_member_descriptor)} across all #{prop_or_dim_label(g1&.dimension).pluralize}: #{sum}",
             "#{sum_as_percent}% of overall total",
             "Mean: #{number_with_delimiter(mean)}",
             "Min: #{number_with_delimiter(min)}",
@@ -51,7 +68,7 @@
             "Range: #{number_with_delimiter(range)}"
           ].join("\n")
         else
-          title = "When grouping by #{prop_or_dim_label @composition.groups[0]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting."
+          title = "When grouping by #{prop_or_dim_label g1&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting."
           text = "n/a"
         end
       %>
