--- a/app/views/data_explorer/_highlight_chooser.html.erb
+++ b/app/views/data_explorer/_highlight_chooser.html.erb
@@ -28,11 +28,11 @@
     data-action="data-explorer--results-table-highlight#highlight">
 
     <option value="">All values</option>
-    <option value="data-highlight-metric">Per metric</option>
-    <option value="data-highlight-metric,data-highlight-group-1">Amongst group 1</option>
-    <option value="data-highlight-metric,data-highlight-group-2">Amongst group 2</option>
-    <option value="data-highlight-metric,data-highlight-interval">Amongst interval</option>
-    <option value="delta,data-highlight-metric,data-highlight-group-1">Group 1 over time</option>
-    <option value="delta,data-highlight-metric,data-highlight-group-1,data-highlight-group-2">Group 1+2 over time</option>
+    <option value="data-dx-metric">Per metric</option>
+    <option value="data-dx-metric,data-dx-group-1-member-descriptor">Amongst group 1</option>
+    <option value="data-dx-metric,data-dx-group-2-member-descriptor">Amongst group 2</option>
+    <option value="data-dx-metric,data-dx-interval-descriptor">Amongst interval</option>
+    <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor">Group 1 over time</option>
+    <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">Group 1+2 over time</option>
   </select>
 </fieldset>
